2008-05-31  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gnl/gnlcomposition.c: (gnl_composition_init),
	(gnl_composition_finalize), (gnl_composition_handle_message),
	(update_pipeline):
	Don't use the objects_lock to protect the message handling, instead
	use a new lock (messages_lock). Avoids a stupid deadlock.

2008-05-30  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gnl/gnl.c:
	* gnl/gnl.h:
	* gnl/gnlcomposition.c:
	* gnl/gnlcomposition.h:
	* gnl/gnlfilesource.c:
	* gnl/gnlfilesource.h:
	* gnl/gnlobject.c:
	* gnl/gnlobject.h:
	* gnl/gnloperation.c:
	* gnl/gnlsource.c:
	* gnl/gnlsource.h:
	Update email adresses of wim and edward to working adresses.
	Use less GNL_* casting macros that actually also do typechecking for
	all parts where it is not needed, and instead use simple casting.

2008-05-27  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gnl/gnlcomposition.c: (add_message), (flush_messages),
	(replace_message), (has_message), (dump_messages),
	(gnl_composition_handle_message), (no_more_pads_object_cb),
	(update_pipeline):
	Properly accumulate segment_start/segment_done messages so that we only
	switch segment when all segment_done have been emitted.
	Inspired by the logic in gstbin.
	* gnl/gnloperation.c: (get_unlinked_sink_ghost_pad),
	(remove_sink_pad), (synchronize_sinks),
	(gnl_operation_request_new_pad), (gnl_operation_release_pad):
	Methods to properly remove request pads.
	* tests/check/common.h:
	Remove a leak

2008-05-26  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gnl/gnlcomposition.c: (unblock_child_pads), (get_new_seek_event),
	(get_current_position),
	(refine_start_stop_in_region_above_priority),
	(convert_list_to_tree), (get_stack_list),
	(get_clean_toplevel_stack), (gnl_composition_change_state),
	(compare_relink_single_node), (are_same_stacks), (update_pipeline),
	(object_start_changed), (object_stop_changed),
	(object_priority_changed), (object_active_changed),
	(object_pad_removed), (object_pad_added),